# python-project-50

./: .gitignore  README.md  makefile  pyproject.toml  setup.cfg
.github/workflows/: Poject_check.yml  Project_check.yml
gendiff/: __init__.py  argparser.py  converter.py  decoder.py  encode.py  gendiff.py  gendiff_main.py  generate_diff.py  make_view.py  parser.py
gendiff/formatters/: __init__.py  format_json.py  format_plain.py  format_stylish.py  plain.py  stylish.py
gendiff/scripts/: gendiff.py  gendiff_script.py
tests/: test_data.py  test_encoding.py  test_gendiff.py  test_gendiff_main.py  test_generatediff.py
tests/fixtures/: example_dict.py  example_diff.py  expected_json.txt  pydict_from_nested_json.py
tests/fixtures/expec_res/: expec_nest_json.txt  expec_plain_json.txt
tests/fixtures/expected_results/: incorrect_format.txt  nested_json.txt
