[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = "gendiff - project, wich show internal representation of the diff between the files"
authors = ["Daniil Balabanov <spacewalrus@bk.ru>"]
readme = "README.md"
packages = [{include = "gendiff"}]
repository = "https://github.com/spacewalrus73/python-project-50"
classifiers = [
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.10",
    "Environment :: Console",
    "Topic :: Education",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Terminals"
]


[tool.poetry.dependencies]
python = "^3.10"
flake8 = "^6.0.0"
pyyaml = "^6.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
pytest-cov = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff_script:main"
